# evaluation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  requirements.txt
script/: generate_tests.py  xml_generator.py
src/: CMakeLists.txt  evaluation.cpp  evaluation.h  main.cpp  parser.cpp  parser.h
test/: CMakeLists.txt  Test  automatically_generated.cpp  test.cpp  unittest_autogen.cpp
test/data/: test_0.xml  test_1.xml
